--- a/index.Rmd
+++ b/index.Rmd
@@ -1,14 +1,33 @@
 ---
 title: "performr vignette"
 author: "Silas Tittes"
-date: "June 13, 2018"
+date: "`r format(Sys.Date(), '%B %d, %Y')`"
 output: html_document
 ---
 
-How to use `performr`
+How to use `performr` package
 ===============
 
-```{r}
-plot(1,1)
+`performr` implements a probabilistic bayesian hierarchical model (implemented in (Stan)[http://mc-stan.org/]) to predict performance curves for a set of input taxa. The manuscript that describes the method is in revision. This page is intended to help those interested in using the model.
+
+Installation
+---------------
+
+Installing `performr` should be done using the following command:
+
+```{r, eval=FALSE}
+devtools::install_github("silastittes/performr")
 ```
+
+
+Simulating example data
+---------------
+
+
+Output
+---------------
+
+
+Posterior predictive data generation
+---------------
 
