--- a/index.Rmd
+++ b/index.Rmd
@@ -5,10 +5,24 @@ date: "`r format(Sys.Date(), '%B %d, %Y')`"
 output: html_document
 ---
 
+NOTE: This document is in progress. Feel free to suggest changes on the package's [GitHub page](https://github.com/silastittes/performr), or by email <silas.tittes@gmail.com>.
+
 How to use `performr` package
 ===============
 
-`performr` implements a probabilistic bayesian hierarchical model (implemented in (Stan)[http://mc-stan.org/]) to predict performance curves for a set of input taxa. The manuscript that describes the method is in revision. This page is intended to help those interested in using the model.
+```{r, echo=FALSE}
+#load library
+suppressMessages(library(performr))
+suppressMessages(library(ggridges))
+theme_set(theme_minimal())
+
+knitr::opts_chunk$set(fig.align = "center")
+
+
+```
+
+
+`performr` implements a probabilistic Bayesian hierarchical model (using [Stan](http://mc-stan.org/)) to predict performance curves for a set of input taxa. The manuscript that describes the method is in revision. This page is intended to help those interested in using the model for their own data.
 
 Installation
 ---------------
@@ -17,28 +31,129 @@ Installing `performr` should be done using the following command:
 ```{r, eval=FALSE}
 #install
 devtools::install_github("silastittes/performr")
-
 #load library
 library(performr)
 ```
+
 
 The `performr` depends on the `tidyverse`, which can take some time to install. Make sure your R is up to date! 
 
 Simulating example data 
 ---------------
 
+For demonstration and model validation, data can be simulated from the hyperpriors. The true parameter values for both hyper parameters and species-level parameters are returned in addition to a simulated data frame. All arguments have defaults, but fiddling with parameter values is encouraged. 
+
+I'll demonstrate a data set with three species, with 20 positions samples along an environmental axis, and three replicates and each position along the axis (wouldn't that be something):
 ```{r}
-simulate_data()
+set.seed(223524)
+perf_df <- simulate_data(n_spp = 3, n_axis = 20, n_reps = 3)
+```
+
+
+Here's quick look at the output:
+```{r}
+str(perf_df)
+perf_df$sim_data %>%
+  ggplot(aes(x, trait, colour = factor(species))) +
+  geom_point() +
+  geom_line(aes(x, mu))
+
 ```
 
 
 Fitting the model with `performr::stan_performance()`
 ---------------
 
+Now that we have some example data, we can fit the model. Arguments with "pr" and "sig" are the parameter priors, which I've set to match the defaults of the simulation (so this is best case scenario for the model getting it right). Notice, I've set a seed to make the results reproducible, and I've reduce the total number of iterations to 200. The default iterations of 2000 is preferred, but for speedy results.
+
+
+```{r, eval=FALSE}
+perf_out <- stan_performance(df = perf_df$sim_data, 
+                             response = trait, 
+                             treatment = x, 
+                             group_ids = species, 
+                             shape1_pr_mu = 2, shape1_pr_sig = 1, 
+                             shape2_pr_mu = 2, shape2_pr_sig = 1, 
+                             stretch_pr_mu = 1, stretch_pr_sig = 1, 
+                             nu_pr_shape = 8, nu_pr_scale = 3, 
+                             min_pr_mu = -5, min_pr_sig = 1, 
+                             max_pr_mu = 5, max_pr_sig = 1,
+                             iter =  200, 
+                             seed = 7345, 
+                             file_id = "stan_example"
+                             )
+```
+
+Although it won't appear on the webpage (the code above is not being evaluated) Stan warns us about the max tree depth (it may also warn about divergent transitions if the simulation is modified). Ideally, those messages should not appear. You can modify the arguments it recommends in  your call to `stan_performance()` as you would if calling Stan directly. Typically, a max_tree_depth between 12 to 14 works well (though slower). The adapt_delta defaults to 0.95, which is sufficient in my experience. Notice the file_id argument, which takes a file prefix if you want to save the model output to file (typically a good idea).
+
+We can read in the model from file as such:
+```{r}
+perf_stan <- rstan::read_stan_csv(csvfiles = c("stan_example.samples_1.csv", 
+                                  "stan_example.samples_2.csv", 
+                                  "stan_example.samples_3.csv", 
+                                  "stan_example.samples_4.csv"))
+```
+
+
 Output
 ---------------
+
+The output is the same as any Stan model. 
+```{r}
+knitr::kable(rstan::summary(perf_stan)$summary)
+```
+
+We can access the posterior draws using `rstan::extract()`, which produces a list containing draws for each parameter of the model.
+```{r}
+draws <- rstan::extract(perf_stan)
+```
+
+
+There are a lot of good packages out there for visualizing posteriors. I haven't learned any of them yet, but here's a quick approach I'm fond of:
+```{r}
+#choose parameter
+param <- "x_max"
+
+max_df <- draws[[param]] %>%
+  as_tibble() %>%
+  gather(species, value)
+
+max_df %>%
+  ggplot(aes(value, species,  fill = species)) +
+  geom_density_ridges(colour = "white") +
+  xlab(param) +
+  theme(legend.position = "none")
+```
+
+Quickly, let's eyeball how these marginal posteriors for the x_max parameter (where performance falls to zero above the optimum) for each species.
+
+```{r}
+max_df %>%
+  group_by(species) %>%
+  summarise(cred_025 = quantile(value, 0.025),
+            cred_975 = quantile(value, 0.975)) %>%
+  mutate(truth = perf_df$true_params$x_max) %>%
+  mutate(within_cred = truth > cred_025 & truth < cred_975)
+```
+
+Cool, looks like the 95% credible interval captures the true value in each case. It would be easy to extend this approach using a function and quickly verify each parameter. 
 
 
 Posterior predictive data generation
 ---------------
+
+The whole concept of posterior prediction and generating data from the model is one of my favorite things about Bayesian statistics. It allows for a lot of creativity in how we check our assumptions. We can generate data from the model using this approach:
+
+First, let's generate a tidy data frame with all the parameter, plus some valuable derived parameters, like the optimum, area, and breadth for each species:
+```{r}
+head(tidy_perf <- perform_df(perf_stan, species_order = c(1, 2, 3)))
+```
+
+Now we can generate pseudo observed data from the posterior draws. 
+```{r}
+tidy_perf %>%
+  filter(draw == 1) %>%
+posterior_predict(par_df = .) %>%
+  head()
+```
 
