added local equal false for the install line. this requires the cpp code to be recompiled. very important for non linux users

--- a/index.Rmd
+++ b/index.Rmd
@@ -30,7 +30,7 @@ Installation
 Installing `performr` is done using the following command:
 ```{r, eval=FALSE}
 #install
-devtools::install_github("silastittes/performr")
+devtools::install_github("silastittes/performr", local = FALSE)
 #load library
 library(performr)
 ```
