calling tidyverse for ggplot and other functions used not already loaded by performr

--- a/index.Rmd
+++ b/index.Rmd
@@ -33,6 +33,7 @@ Installing `performr` is done using the following command:
 devtools::install_github("silastittes/performr", local = FALSE)
 #load library
 library(performr)
+library(tidyverse)
 ```
 
 
