--- a/index.Rmd
+++ b/index.Rmd
@@ -34,6 +34,8 @@ devtools::install_github("silastittes/performr", local = FALSE)
 #load library
 library(performr)
 library(tidyverse)
+library(ggridges)
+theme_set(theme_minimal())
 ```
 
 
