--- a/index.Rmd
+++ b/index.Rmd
@@ -31,7 +31,8 @@ Installing `performr` is done using the following command:
 ```{r, eval=FALSE}
 #install
 devtools::install_github("silastittes/performr", local = FALSE)
-#load library
+
+#load other libraries used below
 library(performr)
 library(tidyverse)
 library(ggridges)
